--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
         <version>0.0.8</version>
         <executions>
           <execution>
-            <!-- Default configuration for running with: mvn clean javafx:run -->
+            <!-- run with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
               <mainClass>com.management.apartmentjavafx/com.management.apartmentjavafx.HelloApplication</mainClass>
